fix overflow res

--- a/style.css
+++ b/style.css
@@ -434,12 +434,10 @@ footer {
 @media only screen and (max-width: 1200px) {
     html,body{
         overflow-x: hidden;
-        overflow: hidden;
     }
     body {
         width: 100%;
         overflow-x: hidden;
-        overflow: hidden;
     }
 
     .grid-container {
